<resources>
    <string name="app_name">Vcanpay</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="account_name">账户名</string>
    <string name="password">密码</string>
    <string name="sign_in">登录</string>
    <string name="register">注册</string>
    <string name="title_activity_register">注册</string>
    <string name="register_submit">提交</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_transferring_history">转账历史</string>
    <string name="title_activity_transfer_money">转账</string>
    <string name="title_activity_add_bank_card">添加银行卡</string>
    <string name="title_activity_bill_details">账单明细</string>
    <string name="title_activity_tabhost">主页</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_location">位置</string>
    <string name="menu_settings">设置</string>
    <string name="title_activity_security_management">安全</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">明细</string>
    <string name="title_activity_change_password">修改登录密码</string>
    <string name="title_activity_change_payment_password">修改支付密码</string>
    <string name="title_activity_find_payment_password">找回支付密码</string>
    <string name="title_activity_help">帮助</string>
    <string name="title_activity_feed_back">反馈</string>
    <string name="title_activity_user_profile">个人资料</string>
    <string name="title_activity_recharge">充值</string>
    <string name="title_activity_transfer_payment">转账</string>
    <string name="title_activity_withdraw">提现</string>
    <string name="title_activity_tutorial">使用指南</string>
    <string name="notification_push">推送通知</string>
    <string name="title_activity_show_activity">Pic Show</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recent_records">最近记录</string>
    <string name="balance_demo_string">余额￥5,0000.00</string>
    <string name="often_used_func">常用的功能</string>
    <string name="bill_details">账单细节</string>
    <string name="all_bills">全部账单</string>
    <string name="recharge_bills">充值</string>
    <string name="payment_bills">付款</string>
    <string name="title_activity_start">开始</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_ok">确定</string>
    <string name="notify">通知</string>
    <string name="account_or_password_not_empty">用户名密码不能为空</string>
    <string name="sign_in_success">登陆成功！</string>
    <string name="title_activity_activity_with_fragment">ActivityWithFragment</string>
    <string name="next">下一步</string>
    <string name="id_card">身份证</string>
    <string name="identification_type">身份类型</string>
    <string name="email">邮箱</string>
    <string name="first_name">姓</string>
    <string name="last_name">名</string>
    <string name="city">城市</string>
    <string name="province">省份</string>
    <string name="country">国家</string>
    <string name="submit">提交</string>
    <string name="email_not_empty">邮箱不能为空！</string>
    <string name="title_activity_register_activity_next">注册</string>
    <string name="network_error">网络错误！</string>
    <string name="confirm_password">确认密码</string>
    <string name="password_not_empty">密码不能为空！</string>
    <string name="confirm_password_not_empty">确认密码不能为空！</string>
    <string name="first_name_not_empty">姓氏不为空！</string>
    <string name="last_name_not_emtpy">名字不能为空！</string>
    <string name="city_not_empty">城市不为空！</string>
    <string name="province_not_empty">省份不为空！</string>
    <string name="country_not_empty">国家不为空！</string>
    <string name="title_activity_request_confirm_email">激活帐号</string>
    <string name="activate_account_hint">请检查邮箱，输入收到的激活代码来激活您的帐户。</string>
    <string name="not_empty">输入不能为空！</string>
    <string name="activation_code_incorrect">激活码错误！\\n请重新输入激活码。</string>
    <string name="new_password">新密码</string>
    <string name="password_not_samne">密码不一致，请重新输入。</string>
    <string name="my_bank_card">我的银行卡</string>
    <string name="title_activity_manage_bank_card">我的银行卡</string>
    <string name="credit_card">信用卡</string>
    <string name="bank_card">银行卡</string>
    <string name="add_bank_card">添加银行卡</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="other">其他</string>
    <string name="account_no">帐户号</string>
    <string name="full_name">姓名</string>
    <string name="account_type">帐户类型</string>
    <string name="bank_name">银行名称</string>
    <string name="bank_branch">银行分行</string>
    <string name="cell_phone">手机号</string>
    <string name="birthday">出生日期</string>
    <string name="sex">性别</string>
    <string name="choose_a_country">选择国家</string>
    <string name="choose_a_province">选择省份</string>
    <string name="choose_a_city">选择城市</string>
    <string name="choose_an_account_type">选择帐户类型</string>
    <string name="title_activity_recharge_input">充值登记</string>
    <string name="title_activity_prepaid_card_recharge">充值卡充值</string>
    <string name="email_format_err">邮箱格式错误！</string>
    <string name="get_vcp">（获取账号）</string>
    <string name="title_activity_choose_region">选择区域</string>
    <string name="choose_a_region">选择区域</string>
    <string name="next_step">下一步</string>
    <string name="region">区域</string>
    <string name="thailand">ประเทศไทย</string>
    <string name="bank">银行</string>
    <string name="title_activity_choose_bank_account">选取VCP账号</string>
    <string name="vcp_account">VCP ACCOUNT</string>
    <string name="ok">确定</string>
    <string name="no_records">当前区域没有账户，请改变区域试一下。</string>
    <string name="date">日期</string>
    <string name="online_bank">网上银行</string>
    <string name="transfer_type">转账类型</string>
    <string name="thai_sign">￥</string>
    <string name="get_account_failure">获取账户失败，请返回重试！</string>
    <string name="error">有错误</string>
    <string name="adding_fund_success">充值成功。服务器没有返回信息描述</string>
    <string name="title_activity_withdraw_confirm">提现确认</string>
    <string name="withdraw_amount">提现金额</string>
    <string name="withdraw_bank">银行</string>
    <string name="cancel">返回</string>
    <string name="withdraw_submit_success">提交成功，等待后台人员审核。</string>
    <string name="colon">:</string>
    <string name="taobao">淘宝网</string>
    <string name="currency_type">币种</string>
    <string name="title_activity_pay">付款</string>
    <string name="action_add_bank_card">添加银行卡</string>
    <string name="choose_a_sex">选择性别</string>
    <string name="sex_other">其他</string>
    <string name="bank_card_suffix">尾号</string>
    <string name="bank_card_type">类型</string>
    <string name="title_activity_bills_to_be_paid">待付账单</string>
    <string name="action_pay">支付</string>
    <string name="title_activity_transfer">转账</string>
    <string name="receiver_email">接收方Email</string>
    <string name="amount">金额</string>
    <string name="timeout_message">连接服务器超时，请重试。</string>
    <string name="server_error_message">服务器当前不可用，请稍后再试。状态代码%d</string>
    <string name="title_activity_phone_recharge">手机充值</string>
    <string name="cell_phone_num">手机号</string>
    <string name="choose_recharge_amount">选择充值金额</string>
    <string name="choose_an_amount">选择金额</string>
    <string name="note">备注</string>
    <string name="receiver_account">接收者账户</string>
    <string name="forget_password"><u>忘记密码?</u></string>
    <string name="input_your_email">输入你的邮箱</string>
    <string name="title_activity_vcan_pay_app">VcanPay</string>
    <string name="title_activity_transfer_confirm">转账确认</string>
    <string name="receiver">接收者</string>
    <string name="title_activity_change_profile">更新个人资料</string>
    <string name="save">保存</string>
    <string name="title_activity_update_address_request">更新地址</string>
    <string name="street">街道</string>
    <string name="district">区（县）</string>
    <string name="post_code">邮政编码</string>
    <string name="title_activity_update_mobile_request">更新手机</string>
    <string name="bill">账单</string>
    <string name="service">服务</string>
    <string name="me">我</string>
    <string name="change_language">更改语言</string>
    <string name="action_save">保存</string>
    <string name="sign_out">退出登录</string>
    <string name="restart_to_change_the_language">你需要重启来使新语言生效。</string>
    <string name="restart">重启</string>
    <string name="counter_or_atm">柜台/ATM</string>
    <string name="list_item_text_example">列表项</string>
    <string name="old_password">旧密码</string>
    <string name="passport">护照</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="unknown_error">程序发生了一个未知的错误。</string>
    <string name="auth_error">验证错误</string>
    <string name="security">安全</string>
    <string name="title_activity_security_manage">修改密码</string>
    <string name="response_success">成功</string>
    <string name="no_data">没有数据</string>
    <string name="success">成功</string>
    <string name="fail">Fail</string>
    <string name="bank_one">中国银行</string>
    <string name="bank_two">招商银行</string>
    <string name="bank_three">工商银行</string>
    <string name="bank_four">建设银行</string>
    <string name="bank_five">农业银行</string>
    <string name="bank_card_id_out_of_range">银行卡id在0-5内</string>
    <string name="title_activity_input_amount">提现</string>
    <string name="input_withdraw_amount">输入提现金额</string>
    <string name="choose_a_bank_card">选择银行卡</string>
    <string name="title_activity_forget_password">忘记密码</string>
    <string name="reset_password_hint">请检查你的邮箱，根据指示重设你的密码。</string>
    <string name="id_card_or_passport">身份证/护照</string>
    <string name="transaction_ref_no">交易号</string>
    <string name="order_no">订单号</string>
    <string name="trade_type">交易类型</string>
    <string name="withdraw">提现</string>
    <string name="order_amount">金额</string>
    <string name="order_created">订单时间</string>
    <string name="status">状态</string>
    <string name="seller">卖家</string>
    <string name="fee">手续费</string>
    <string name="activate_account">激活账户</string>
    <string name="multi_lang">多语言</string>
    <string name="profile">个人资料</string>
    <string name="message_push">消息推送</string>
    <string name="frozen_amount">冻结金额</string>
    <string name="balance">余额</string>
    <string name="total_amount">总金额</string>
    <string name="account">账户</string>
    <string name="switch_language">切换语言</string>
    <string name="title_activity_activate_account">激活</string>
    <string name="input_activate_code">输入激活代码</string>
    <string name="account_activated_hint">账户已激活。将转到登录页面。</string>
    <string name="add_fund_submit_success">充值提交成功，请等待后台人员审核。</string>
    <string name="title_activity_phone_recharge_details">PhoneRechargeDetails</string>
    <string name="txt_yo_yo">some content</string>
    <string name="welcome_prefix">Welcome,</string>
    <string name="home">主页</string>
    <string name="add_fund">充值</string>
    <string name="pay">付款</string>
    <string name="send_money">转账</string>
    <string name="cellphone_recharge">手机充值</string>
    <string name="mall">商城</string>
    <string name="envelop">红包</string>
    <string name="guide">指南</string>
    <string name="surprise">小惊喜</string>
    <string name="change_password_success">修改密码成功。</string>
    <string name="title_activity_phone_recharge_success">PhoneRechargeSuccessActivity</string>
    <string name="feedback_hint">Would you like an email response?</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="feedback_title">Enter feedback details to send to us:</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="your_content">Problem Description</string>
</resources>