<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--多语言-->
    <PreferenceCategory android:title="@string/multi_lang">
        <ListPreference
            android:key="language_list"
            android:title="@string/change_language"
            android:defaultValue="default_lang"
            android:entries="@array/pref_language_list_titles"
            android:entryValues="@array/pref_language_list_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />
    </PreferenceCategory>

    <!-- 推送 -->
    <PreferenceCategory android:title="@string/message_push">
        <SwitchPreference
            android:text="text text"
            android:key="example_notification"
            android:title="@string/notification_push"
            android:defaultValue="true"
            android:switchTextOn="On"
            android:switchTextOff="Off"/>
    </PreferenceCategory>
</PreferenceScreen>
